--- a/src/app/components/dialog.component.html
+++ b/src/app/components/dialog.component.html
@@ -21,8 +21,9 @@
           <div>
             <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
               <h3 class="text-2xl font-semibold leading-6 text-gray-900">
-                Create/Edit to-do
+                {{ data.mode === "create" ? "Create" : "Edit" }} to-do
               </h3>
+
               <div class="mt-4 flex flex-col gap-5">
                 <input
                   type="text"
@@ -56,8 +57,9 @@
             [disabled]="!todoForm.valid"
             class="inline-flex w-full justify-center rounded-md bg-[#FF4400] px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-orange-500 sm:ml-3 sm:w-auto"
           >
-            Create
+            {{ data.mode === "edit" ? "Edit" : "Create" }}
           </button>
+
           <button
             type="button"
             (click)="onClose()"
