--- a/src/app/components/items.component.html
+++ b/src/app/components/items.component.html
@@ -8,12 +8,22 @@
   </div>
 
   <ul class="flex flex-col gap-3">
-    <li class="flex p-4 items-center rounded-lg border bg-[#262626] border-[#333] text-brand gap-3"
-      *ngFor="let item of items">
+    <li
+      class="flex p-4 items-center rounded-lg border bg-[#262626] border-[#333] text-brand gap-3"
+      *ngFor="let item of items"
+    >
       <div class="flex flex-1 items-center">
-        <input type="checkbox" [checked]="item.completed" (change)="onCheckboxChange(item)"
-          class="form-checkbox text-[#FF4400] rounded-full p-3" name="completed" />
-        <span class="text-[#F2F2F2] ml-4" [ngClass]="{ 'line-through': item.completed === true }">
+        <input
+          type="checkbox"
+          [checked]="item.completed"
+          (change)="onCheckboxChange(item)"
+          class="form-checkbox text-[#FF4400] rounded-full p-3"
+          name="completed"
+        />
+        <span
+          class="text-[#F2F2F2] ml-4"
+          [ngClass]="{ 'line-through': item.completed === true }"
+        >
           {{ item.description }}
         </span>
       </div>
@@ -21,18 +31,31 @@
       <span class="w-32 text-[#F2F2F2] text-center">
         {{ item.dueDate | date }}
       </span>
-      <span class="w-20 text-center text-xs font-medium capitalize rounded-xl" [ngClass]="{
+      <span
+        class="w-20 text-center text-xs font-medium capitalize rounded-xl"
+        [ngClass]="{
           ' bg-red-100 text-red-800': item.priority === 'high',
           ' bg-yellow-100 text-yellow-800 ': item.priority === 'medium',
           ' bg-green-100 text-green-800': item.priority === 'low'
-        }">
+        }"
+      >
         {{ item.priority }}
       </span>
 
-      <span class="w-12 flex items-center justify-center cursor-pointer" (click)="onEdit(item)">
-        <img class="w-5 h-5" src="/assets/pen-to-square-solid.svg" alt="edit icon" />
+      <span
+        class="w-12 flex items-center justify-center cursor-pointer"
+        (click)="onEdit(item)"
+      >
+        <img
+          class="w-5 h-5"
+          src="/assets/pen-to-square-solid.svg"
+          alt="edit icon"
+        />
       </span>
-      <span class="w-12 flex items-center justify-center cursor-pointer" (click)="onDelete(item)">
+      <span
+        class="w-12 flex items-center justify-center cursor-pointer"
+        (click)="onDelete(item)"
+      >
         <img class="w-5 h-5" src="/assets/trash-solid.svg" alt="trash icon" />
       </span>
     </li>
